--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ghasemkiani/binance-smart-chain",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Binance Smart Chain utility",
   "main": "index.js",
   "scripts": {
@@ -24,9 +24,11 @@
   },
   "homepage": "https://gitlab.com/ghasemkiani/binance-smart-chain#readme",
   "dependencies": {
+    "@ghasemkiani/bscscan-api": "gitlab:ghasemkiani/bscscan-api",
     "@ghasemkiani/commonbase": "github:ghasemkiani/commonbase",
     "@ghasemkiani/ethereum": "gitlab:ghasemkiani/ethereum",
-    "bignumber.js": "^9.0.0",
+    "bignumber.js": "^9.0.1",
+    "isomorphic-fetch": "^3.0.0",
     "web3": "^1.3.0"
   }
 }
