--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ghasemkiani/binance-smart-chain",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "description": "Binance Smart Chain utility",
   "main": "index.js",
   "scripts": {
@@ -24,9 +24,9 @@
   },
   "homepage": "https://gitlab.com/ghasemkiani/binance-smart-chain#readme",
   "dependencies": {
-    "@ghasemkiani/bscscan-api": "gitlab:ghasemkiani/bscscan-api",
+    "@ghasemkiani/bscscan-api": "github:ghasemkiani/bscscan-api",
     "@ghasemkiani/base": "github:ghasemkiani/base",
-    "@ghasemkiani/ethereum": "gitlab:ghasemkiani/ethereum",
+    "@ghasemkiani/ethereum": "github:ghasemkiani/ethereum",
     "bignumber.js": "^9.0.1",
     "isomorphic-fetch": "^3.0.0",
     "web3": "^1.3.4"
