Migrate to ESM module syntax

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@ghasemkiani/binance-smart-chain",
-  "version": "1.5.3",
+  "version": "2.0.0",
   "description": "Binance Smart Chain utility",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
