--- a/package.json
+++ b/package.json
@@ -1,35 +1,1 @@
-{
-  "name": "@ghasemkiani/binance-smart-chain",
-  "version": "2.0.2",
-  "description": "Binance Smart Chain utility",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://gitlab.com/ghasemkiani/binance-smart-chain.git"
-  },
-  "keywords": [
-    "javascript",
-    "nodejs",
-    "cryptocurrency",
-    "binance",
-    "binance-smart-chain"
-  ],
-  "author": "Ghasem Kiani",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://gitlab.com/ghasemkiani/binance-smart-chain/issues"
-  },
-  "homepage": "https://gitlab.com/ghasemkiani/binance-smart-chain#readme",
-  "dependencies": {
-    "@ghasemkiani/base": "github:ghasemkiani/base",
-    "@ghasemkiani/bscscan-api": "github:ghasemkiani/bscscan-api",
-    "@ghasemkiani/ethereum": "github:ghasemkiani/ethereum",
-    "bignumber.js": "^9.0.1",
-    "isomorphic-fetch": "^3.0.0",
-    "web3": "^1.3.4"
-  }
-}
+{"name":"@ghasemkiani/binance-smart-chain","version":"2.0.3","description":"Binance Smart Chain utility","type":"module","main":"index.js","scripts":{"test":"echo \"Error: no test specified\" && exit 1"},"repository":{"type":"git","url":"git+https://gitlab.com/ghasemkiani/binance-smart-chain.git"},"keywords":["javascript","nodejs","cryptocurrency","binance","binance-smart-chain"],"author":"Ghasem Kiani","license":"MIT","bugs":{"url":"https://gitlab.com/ghasemkiani/binance-smart-chain/issues"},"homepage":"https://gitlab.com/ghasemkiani/binance-smart-chain#readme","dependencies":{"@ghasemkiani/base":"github:ghasemkiani/base","@ghasemkiani/bscscan-api":"github:ghasemkiani/bscscan-api","@ghasemkiani/ethereum":"github:ghasemkiani/ethereum","bignumber.js":"^9.0.1","isomorphic-fetch":"^3.0.0","web3":"^1.3.4"}}
